[gd_scene load_steps=2 format=3 uid="uid://o2kt7cdkeqm4"]

[ext_resource type="Script" path="res://maps.gd" id="1_24c8g"]

[node name="Maps" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_24c8g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 325.0
offset_top = 250.0
offset_right = 825.0
offset_bottom = 450.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Map1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "track one"

[node name="Map2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "track two"

[node name="Map3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "track three"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Map1" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Map2" to="." method="_on_map_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Map3" to="." method="_on_map_3_pressed"]
